--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 <!-- Toggle Share WA, FB, IG -->
 <div class="fixed bottom-6 right-5 z-50">
   <button id="toggleBtn" class="w-12 h-12 bg-white/10 rounded-full flex items-center justify-center shadow-lg hover:bg-white/20 transition">
-    â†‘
+    <span id="arrowIcon">↑</span>
   </button>
   <div id="shareIcons" class="flex flex-col gap-3 mt-3 items-center opacity-0 pointer-events-none transition-all duration-300">
     <a href="https://wa.me/?text=https://yuda2525.github.io/YZ01-site/" target="_blank">
@@ -316,6 +316,12 @@
   toggleBtn.addEventListener('click', () => {
     shareIcons.classList.toggle('opacity-0');
     shareIcons.classList.toggle('pointer-events-none');
+    const arrow = document.getElementById('arrowIcon');
+    if (shareIcons.classList.contains('opacity-0')) {
+      arrow.textContent = '↑';
+    } else {
+      arrow.textContent = '↓';
+    }
   });
 </script>
 
@@ -385,8 +391,9 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <title>Y&Z Audio Ring EQ Playlist</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Y&Z Studio Final</title>
   <style>
     body {
       margin: 0;
@@ -414,8 +421,12 @@
 
     #volume-slider {
       position: fixed;
-      top: 30px;
+      top: 50%;
       left: 20px;
+      transform: rotate(-90deg);
+      transform-origin: left center;
+      margin-top: -50px;
+      height: 100px;
       width: 100px;
       z-index: 2;
     }
@@ -428,20 +439,35 @@
       height: 120px;
       z-index: 1;
     }
+
+    .fixed-clock {
+      position: fixed;
+      top: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      color: cyan;
+      font-size: 18px;
+      font-weight: bold;
+      animation: pulse 1s infinite;
+      z-index: 999;
+    }
+
+    @keyframes pulse {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0.4; }
+    }
   </style>
 </head>
 <body>
 
-<!-- Tombol mute -->
+<div class="fixed-clock">00:00</div>
+
 <button id="mute-btn"></button>
 
-<!-- Slider volume -->
 <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.3">
 
-<!-- Canvas Equalizer -->
 <canvas id="eq-ring" width="120" height="120"></canvas>
 
-<!-- Audio Player -->
 <audio id="bg-audio" autoplay loop crossorigin="anonymous"></audio>
 
 <script>
@@ -455,18 +481,12 @@
   let initialized = false;
 
   const tracks = [
-    "https://raw.githubusercontent.com/yuda2525/YZ-site/main/Avenged%20Sevenfold%20-%20So%20Far%20Away%20%5BOfficial%20Music%20Video%5D.m4a",
-    "https://raw.githubusercontent.com/yuda2525/YZ-site/main/Avenged%20Sevenfold%20-%20So%20Far%20Away%20%5BOfficial%20Music%20Video%5D.m4a",
     "https://raw.githubusercontent.com/yuda2525/YZ-site/main/Avenged%20Sevenfold%20-%20So%20Far%20Away%20%5BOfficial%20Music%20Video%5D.m4a"
   ];
 
   let currentTrack = 0;
-
-  // Emoji Unicode stabil
-  const volumeOnIcon = "\uD83D\uDD0A"; // 🔊
-  const volumeOffIcon = "\uD83D\uDD07"; // 🔇
-
-  // Set icon awal
+  const volumeOnIcon = "\uD83D\uDD0A";
+  const volumeOffIcon = "\uD83D\uDD07";
   muteBtn.textContent = audio.muted ? volumeOffIcon : volumeOnIcon;
 
   function playTrack(index) {
@@ -533,10 +553,9 @@
       panner.connect(audioCtx.destination);
 
       setInterval(() => {
-        panner.pan.value = Math.sin(Date.now() / 1000); // stereo kiri-kanan
+        panner.pan.value = Math.sin(Date.now() / 1000);
       }, 100);
 
-      // Volume slider aktif
       volumeSlider.addEventListener("input", () => {
         gainNode.gain.value = parseFloat(volumeSlider.value);
       });
