--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
   <div class="content">
     <div class="island-header mb-6">
       <h1 class="text-4xl font-[Orbitron] bg-gradient-to-r from-cyan-300 via-purple-500 to-pink-400 text-transparent bg-clip-text">
-        Selamat datang di Y&Z Studio
+        SELAMAT DATANG<br>DI<br>Y&Z STUDIO
       </h1>
     </div>
-    <p class="text-white/90">Digital agency cinematic - solusi visual terbaik kota ini.</p>
+    <p class="text-white/90">Digital agency cinematic - sesuai kebutuhan anda!</p>
 
     <!-- Harga -->
     <h2 class="text-2xl font-bold mt-20">Paket Harga</h2>
@@ -298,13 +298,13 @@
     <span id="arrowIcon">↑</span>
   </button>
   <div id="shareIcons" class="flex flex-col gap-3 mt-3 items-center opacity-0 pointer-events-none transition-all duration-300">
-    <a href="https://wa.me/?text=https://yuda2525.github.io/YZ-site/" target="_blank">
+    <a href="https://wa.me/?text=https://yuda2525.github.io/YZ01-site/" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WA" class="w-10 h-10 rounded-full" />
     </a>
-    <a href="https://www.facebook.com/sharer/sharer.php?u=https://yuda2525.github.io/YZ-site/" target="_blank">
+    <a href="https://www.facebook.com/sharer/sharer.php?u=https://yuda2525.github.io/YZ01-site/" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="FB" class="w-10 h-10 rounded-full" />
     </a>
-    <a href="#" onclick="navigator.clipboard.writeText('https://yuda2525.github.io/YZ-site/'); alert('Link IG disalin!');">
+    <a href="#" onclick="navigator.clipboard.writeText('https://yuda2525.github.io/YZ01-site/'); alert('Link IG disalin!');">
       <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="IG" class="w-10 h-10 rounded-full" />
     </a>
   </div>
